<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">WeHud</string>
    <string name="hint_usernameEmail">Username or Email Address</string>
    <string name="login_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="password_lost"><u>I lost my password</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="hint_text">Write something here…</string>
    <string name="create_account">Create account</string>
    <string name="send_email">Send email</string>
    <string name="error_field_required">This field is required</string>
    <string name="message_connect">Connecting to WeHud…</string>
    <string name="message_loginSuccess">Login Success</string>
    <string name="message_loginFail">Login Failed</string>
    <string name="title_register">Sign Up</string>
    <string name="error_passwords_no_match">Passwords do not match</string>
    <string name="message_registerSuccess">Account created</string>
    <string name="message_registerFail">Register Failed</string>

    <string name="title_home">Home</string>
    <string name="title_login">Sign In</string>
    <string name="title_connection">Connection</string>

    <string name="item_home">Home</string>
    <string name="item_search">Search</string>
    <string name="item_geolocation">Geolocation</string>
    <string name="item_profile">My Profile</string>
    <string name="item_publish">Publish</string>

    <string name="rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_required_toast">Location permission is required.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps.</string>
    <string name="rationale_locationTitle">Location Permission needed</string>
    <string name="permission_denied">Permission denied</string>
    <string name="empty_list">This list is empty.</string>
    <string name="img">WeHud</string>
    <string name="username">WeHud</string>
    <string name="datetime_created">1970/01/01 00:00 AM</string>
    <string name="reply">\@WeHudTeam</string>
    <string name="likes">3333</string>
    <string name="comments">2222</string>
    <string name="text">This is a veeeeeeery looooooong teeeeeeeext, hooo, hoo, hooo</string>
    <string name="tab_myFeeds">My Feeds</string>
    <string name="game">Pokémon Diamond Version</string>
    <string name="newPost_isOpinion">I have an opinion about a game</string>
    <string name="newPost_encryptMessage">I want to encrypt this message for a follower</string>
    <string name="newPost_receiverOptional">Send this post to: (Optional)</string>
    <string name="newPost_receiverRequired">Send this post to: (Required)</string>
    <string name="newPost_gameOptional">Game: (Optional) </string>
    <string name="newPost_gameRequired">Game: (Required) </string>
    <string name="publish">Publish this post</string>
    <string name="title_publish">Publish</string>
    <string name="message_publish">Publishing post…</string>
    <string name="goTo_profile">Go to profile</string>
    <string name="follow">Follow</string>
    <string name="title_comments">Comments</string>
    <string name="show_password">Show Password</string>
    <string name="hint_video">YouTube VideoID: (Optional)</string>
    <string name="dialog_isToEncrypt">Do you want to encrypt this post\'s text? If so, please specify a user you will send this to.</string>
    <string name="dialog_isOpinion">Is your post an opinion? If so, please specify a game and a rating</string>
    <string name="message_publishSuccess">Post was successfully sent!</string>
    <string name="platforms">Nintendo DS</string>
    <string name="game_categoriesTitle">Categories</string>
    <string name="game_categories">RPG</string>
    <string name="game_editorTitle">Editor</string>
    <string name="game_editor">Nintendo</string>
    <string name="game_developerTitle">Developer</string>
    <string name="game_developer">Game Freak</string>
    <string name="game_synopsisTitle">Synopsis</string>
    <string name="game_synopsis">This is the synopsis for the game Pokémon Diamond Version.</string>
    <string name="game_website"><u>www.gamefreak.co.jp</u></string>
    <string name="game_websiteTitle">Website</string>
    <string name="game_releasedAtTitle">Initial release Date</string>
    <string name="game_releasedAt">2006/09/28</string>
    <string name="game_isCooperative">Cooperative</string>
    <string name="game_isMultiplayer">Multiplayer</string>
    <string name="game_isSolo">Solo</string>
    <string name="tab_games">Games</string>
    <string name="message_commentSuccess">Comment successfully published</string>
    <string name="dialog_newCommentTitle">Publish Comment</string>
    <string name="profile_goToUser">Go To Profile</string>
    <string name="profile_contacts">Contacts</string>
    <string name="profile_messages">Messages</string>
    <string name="profile_settings">My Settings</string>
    <string name="profile_logout">Sign Out</string>
    <string name="dialog_logoutTitle">Sign Out</string>
    <string name="dialog_logoutMessage">Exit the application?</string>
    <string name="user_profile">Profile</string>
    <string name="message_update">Update in progress…</string>
    <string name="unfollow">Unfollow</string>
    <string name="message_updateSuccess">Updated successfully</string>
    <string name="settings_usernameTitle">Username</string>
    <string name="settings_replyTitle">Reply</string>
    <string name="email">wehudteam@wehud.fr</string>
    <string name="settings_emailTitle">Email Address</string>
    <string name="password">*****</string>
    <string name="settings_passwordTitle">Password</string>
    <string name="editDialog_newPassword">New Password</string>
    <string name="editDialog_confirmNewPassword">Confirm New Password</string>
    <string name="settings_changeProfileImageButton">Change Profile Image</string>
    <string name="settings_dateOfBirthTitle">Date Of Birth</string>
    <string name="dateOfBirth">1970/01/01</string>
    <string name="dialog_datePickerHeaderTitle">Choose Date</string>
    <string name="settings_updateButton">Update account settings</string>
    <string name="settings_deleteButton">Delete this account</string>
    <string name="dialog_deleteAccountTitle">Delete Account</string>
    <string name="dialog_deleteAccount">Are you sure you want to delete this account?</string>
    <string name="message_accountDeleted">Your account has been deleted</string>
    <string name="title_profile">Profile</string>
    <string name="tab_popular">Popular</string>
    <string name="item_logout">Sign Out</string>
    <string name="title_messages">Messages</string>
    <string name="message_logout">Successfully logged out</string>
    <string name="userInfo_followerCount">1723</string>
    <string name="userInfo_followers">Followers</string>
    <string name="gameInfo_followers">Followers</string>
    <string name="gameInfo_followerCount">1233</string>
    <string name="userInfo_follower">Follower</string>
    <string name="gameInfo_follower">Follower</string>
    <string name="dialog_changeProfileImageTitle">Change Profile Image</string>
    <string name="geoloc_myPosition">My position</string>
    <string name="error_serverNoResponse">There is no response</string>
    <string name="error_noResponse">There was no response</string>
    <string name="error_server">Server Error</string>
    <string name="error_notFound">Resource not found</string>
    <string name="error_invalidCredentials">Invalid credentials</string>
    <string name="game_profile">Profile</string>
    <string name="hint_dateOfBirth">Date Of Birth</string>

</resources>
