<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/settings_padding"
        tools:context="esgi.project.wehud.activity.SettingsActivity">

        <LinearLayout
            android:id="@+id/layout_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/settings_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img"
                android:scaleType="fitCenter"
                tools:src="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/settings_changeProfileImageButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_marginTop"
                android:text="@string/settings_changeProfileImageButton" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_verticalSpacing" />

        <LinearLayout
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_usernameTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/settings_username"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_marginTop"
                android:text="@string/username"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_verticalSpacing" />

        <LinearLayout
            android:id="@+id/layout_dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_dateOfBirthTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/settings_dateOfBirth"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_marginTop"
                android:text="@string/dateOfBirth"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_verticalSpacing" />

        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_emailTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/settings_email"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_marginTop"
                android:text="@string/email"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_verticalSpacing" />

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_passwordTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/settings_password"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_marginTop"
                android:text="@string/password"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_btnVerticalSpacing" />

        <Button
            android:id="@+id/settings_updateButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_updateButton" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_verticalSpacing" />

        <Button
            android:id="@+id/settings_deleteButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_deleteButton" />

    </LinearLayout>

</ScrollView>