<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/gameInfo_padding">

        <LinearLayout
            android:id="@+id/layout_gameEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_editorTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/game_editor"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gameInfo_marginTop"
                android:text="@string/game_editor"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameInfo_verticalSpacing" />

        <LinearLayout
            android:id="@+id/layout_gameDeveloper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_developerTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/game_developer"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gameInfo_marginTop"
                android:text="@string/game_developer"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameInfo_verticalSpacing" />

        <LinearLayout
            android:id="@+id/layout_gameCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_categoriesTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/game_categories"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gameInfo_marginTop"
                android:text="@string/game_categories"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameInfo_verticalSpacing" />

        <LinearLayout
            android:id="@+id/layout_gameReleasedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_releasedAtTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/game_releasedAt"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gameInfo_marginTop"
                android:text="@string/game_releasedAt"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameInfo_verticalSpacing" />

        <LinearLayout
            android:id="@+id/layout_gameSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_synopsisTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/game_synopsis"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gameInfo_marginTop"
                android:text="@string/game_synopsis"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameInfo_verticalSpacing" />

        <LinearLayout
            android:id="@+id/layout_gameWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_websiteTitle"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/game_website"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gameInfo_marginTop"
                android:text="@string/game_website"
                android:textColor="@android:color/holo_blue_dark" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameInfo_verticalSpacing" />

        <TextView
            android:id="@+id/game_isSolo"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_solo"
            android:drawablePadding="@dimen/gameInfo_padding"
            android:drawableStart="@drawable/ic_solo"
            android:gravity="center_vertical"
            android:text="@string/game_isSolo"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameInfo_verticalSpacing" />

        <TextView
            android:id="@+id/game_isMultiplayer"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_multiplayer"
            android:drawablePadding="@dimen/gameInfo_padding"
            android:drawableStart="@drawable/ic_multiplayer"
            android:gravity="center_vertical"
            android:text="@string/game_isMultiplayer"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/gameInfo_verticalSpacing" />

        <TextView
            android:id="@+id/game_isCooperative"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_cooperative"
            android:drawablePadding="@dimen/gameInfo_padding"
            android:drawableStart="@drawable/ic_cooperative"
            android:gravity="center_vertical"
            android:text="@string/game_isCooperative"
            android:textColor="@android:color/black"
            android:visibility="gone" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>