<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/comment_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img"
        android:scaleType="fitCenter"
        tools:src="@mipmap/ic_launcher" />

    <android.support.v4.widget.Space
        android:layout_width="@dimen/post_horizontalSpacing"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/comment_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="@string/username" />

            <TextView
                android:id="@+id/comment_createdAt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                tools:text="@string/datetime_created" />

        </LinearLayout>

        <TextView
            android:id="@+id/comment_screenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            tools:text="@string/reply" />

    </LinearLayout>

</LinearLayout>