<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/infoWindow_paddingBottom">

    <TextView
        android:id="@+id/infoWindow_username"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/infoWindow_marginLeftStart"
        android:layout_marginStart="@dimen/infoWindow_marginLeftStart"
        android:layout_marginTop="@dimen/infoWindow_marginTop"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/username" />

    <Button
        android:id="@+id/infoWindow_followUnfollowButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/infoWindow_marginRightEnd"
        android:layout_marginRight="@dimen/infoWindow_marginRightEnd"
        android:layout_marginTop="@dimen/infoWindow_followBtnMarginTop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/follow" />

    <Button
        android:id="@+id/infoWindow_profileButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/infoWindow_marginRightEnd"
        android:layout_marginLeft="@dimen/infoWindow_marginLeftStart"
        android:layout_marginRight="@dimen/infoWindow_marginRightEnd"
        android:layout_marginStart="@dimen/infoWindow_marginLeftStart"
        android:layout_marginTop="@dimen/infoWindow_profileBtnMarginTop"
        android:text="@string/goTo_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoWindow_username" />

</android.support.constraint.ConstraintLayout>